--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -2,17 +2,9 @@
 
 	<h2>{{ facesnap.title | titlecase }} </h2>
 
-	<p>Mis en ligne le {{ facesnap.createdDate | date }}</p>
-
-	<img [src]="facesnap.imageUrl" [alt]="facesnap.title">
-
 	<p>{{ facesnap.description }}</p>
 
-	<p *ngIf="facesnap.location" >Photo prise à : {{ facesnap.location }}</p>
-
-	<p>
-		<button (click)="onSnap()" >{{ buttonContent }}</button>
-		<span [ngStyle]="{ color : 'rgb(0, '+ facesnap.snaps +' ,0)' }" >🤌 {{ facesnap.snaps }}</span>
-	</p>
-
+	<button (click)="onViewFaceSnap()">
+    VIEW
+  </button>
 </div>
