ajout du module http

--- a/snapface/src/app/single-face-snap/single-face-snap.component.html
+++ b/snapface/src/app/single-face-snap/single-face-snap.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card" [ngClass]="{snapped : buttonContent === 'Dislike'}">
+<div class="face-snap-card" *ngIf=" facesnap$ | async as facesnap "  [ngClass]="{snapped : buttonContent === 'Dislike'}">
 
 	<h2>{{ facesnap.title | titlecase }} </h2>
 
