--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <app-header></app-header>
-<router-outlet></router-outlet> -->
-<h1> {{interval$ }} </h1>
+<app-header></app-header>
+<router-outlet></router-outlet>
