--- a/snapface/src/app/face-snap-list/face-snap-list.component.html
+++ b/snapface/src/app/face-snap-list/face-snap-list.component.html
@@ -1,2 +1,2 @@
-<app-face-snap  *ngFor=" let facesnap of facesnaps " [facesnap]="facesnap"></app-face-snap>
+<app-face-snap  *ngFor=" let facesnap of facesnaps$ | async " [facesnap]="facesnap"></app-face-snap>
 
